# Openterface_QT

./: .gitignore  CMakeLists.txt  index.html
cmake/: OpenterfaceUtils.cmake
